[package]
name = "table-extract"
version = "0.2.3"
authors = ["Mitchell Kember <mk12360@gmail.com>"]
edition = "2018"
description = "Utility for extracting data from HTML tables"
license = "MIT"
homepage = "https://github.com/mk12/table-extract"
repository = "https://github.com/mk12/table-extract"
documentation = "https://docs.rs/table-extract"
readme = "README.md"
keywords = ["html", "table", "parse"]
categories = ["parsing"]

[dependencies]
scraper = "0.18"
